Update the project to 18.3.0b3, which has some daydream fixes

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 [Bb]uild/
 [Bb]uilds/
 
+
+
 # Visual Studio cache directory
 .vs/
 
@@ -30,6 +32,9 @@ ExportedObj/
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+# Unity3D formatting tool artifacts
+*.preformat.bak
 
 # Builds
 *.apk
