--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.xr.arfoundation": "./Packages/com.unity.xr.arfoundation@1.0.0-preview.22",
     "com.unity.xr.arkit": "1.0.0-preview.23",
     "com.unity.xr.legacyinputhelpers": "1.0.0",
+    "com.unity.xr.oculus.android": "1.29.1",
     "com.unity.xr.oculus.standalone": "1.29.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
